# OnvifPack

./: CMakeLists.txt  Demo.cpp  README.md
include/gsoap/soap/: ErrorLog.h
include/gsoap/soap/client/: soapAdvancedSecurityServiceBindingProxy.h  soapDeviceIOBindingProxy.h  soapImagingBindingProxy.h  soapwsddProxy.h  soapwsrmProxy.h
include/onvifpack/: onvifClientDevice.h  onvifClientMedia.h  onvifClientPTZ.h  onvifClientRemoteDiscovery.h
src/gsoap/soap/: ErrorLog.cpp
src/gsoap/soap/client/: soapAdvancedSecurityServiceBindingProxy.cpp  soapDeviceIOBindingProxy.cpp  soapImagingBindingProxy.cpp  soapwsddProxy.cpp  soapwsrmProxy.cpp
src/onvifpack/: onvifClientDevice.cpp  onvifClientMedia.cpp  onvifClientPTZ.cpp  onvifClientRemoteDiscovery.cpp
